more room stuff